@@ -1,0 +1,78 @@
+/*
+ * Copyright (C) ExBin Project
+ *
+ * This application or library is free software: you can redistribute it and/or
+ * modify it under the terms of the GNU Lesser General Public License as
+ * published by the Free Software Foundation, either version 3 of the License,
+ * or (at your option) any later version.
+ *
+ * This application or library is distributed in the hope that it will be
+ * useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+ * See the GNU Lesser General Public License for more details.
+ *
+ * You should have received a copy of the GNU Lesser General Public License
+ * along this application.  If not, see <http://www.gnu.org/licenses/>.
+ */
+package org.exbin.deltahex.netbeans.panel;
+
+import org.exbin.deltahex.swing.CodeArea;
+
+/**
+ * Hexadecimal editor options panel with border.
+ *
+ * @version 0.1.5 2017/03/05
+ * @author ExBin Project (http://exbin.org)
+ */
+public class DeltaHexOptionsPanelBorder extends javax.swing.JPanel {
+
+    public DeltaHexOptionsPanelBorder() {
+        initComponents();
+    }
+
+    /**
+     * This method is called from within the constructor to initialize the form.
+     * WARNING: Do NOT modify this code. The content of this method is always
+     * regenerated by the Form Editor.
+     */
+    @SuppressWarnings("unchecked")
+    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
+    private void initComponents() {
+
+        optionsPanel = new org.exbin.deltahex.netbeans.panel.DeltaHexOptionsPanel();
+
+        javax.swing.GroupLayout layout = new javax.swing.GroupLayout(this);
+        this.setLayout(layout);
+        layout.setHorizontalGroup(
+            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(layout.createSequentialGroup()
+                .addContainerGap()
+                .addComponent(optionsPanel, javax.swing.GroupLayout.DEFAULT_SIZE, 538, Short.MAX_VALUE)
+                .addContainerGap())
+        );
+        layout.setVerticalGroup(
+            layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
+            .addGroup(layout.createSequentialGroup()
+                .addContainerGap()
+                .addComponent(optionsPanel, javax.swing.GroupLayout.DEFAULT_SIZE, 401, Short.MAX_VALUE)
+                .addContainerGap())
+        );
+    }// </editor-fold>//GEN-END:initComponents
+
+
+    // Variables declaration - do not modify//GEN-BEGIN:variables
+    private org.exbin.deltahex.netbeans.panel.DeltaHexOptionsPanel optionsPanel;
+    // End of variables declaration//GEN-END:variables
+
+    public void setFromCodeArea(CodeArea codeArea) {
+        optionsPanel.setFromCodeArea(codeArea);
+    }
+
+    public void applyToCodeArea(CodeArea codeArea) {
+        optionsPanel.applyToCodeArea(codeArea);
+    }
+
+    public void store() {
+        optionsPanel.store();
+    }
+}
